# landing-site-selection

./: .gitignore  README.md  get_earth_data.py  get_osm.ipynb  overlay_osm_on_binary_map.py  pyproject.toml  safety_score.py  safety_score_old.py  satlas.py  segment_buildings.ipynb  select_landing_site.py
old_stuff/: get_earth_data.py  main.py  pyproject.toml.old  select_landing_site.py
old_stuff/project_scaffold/: ekf.py  icp.py  main.py  main_traj.py  pointcloud.py  safety_score.py  sim_lidar.py  sim_traj.py  terrain.py  transforms.py
project_scaffold/: ekf.py  fuse_maps.py  icp.py  main.py  main_traj.py  safety_score.py  se3.py  sim_imu.py  sim_lidar.py  sim_traj.py  terrain.py  viz.py  viz_fusion.py
results/: norcoast6_landable_areas.tif
