[project]
name = "landing-site-selection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.3",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "osmnx>=2.0.7",
    "rasterio>=1.4.4",
    "scipy>=1.15.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
